<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/setSyncMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/phandler_set_sync_protect"
        android:textSize="16sp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/delSyncMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/phandler_del_sync_protect"
        android:textSize="16sp"
        android:gravity="center"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/insertSyncMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/phandler_insert_sync_msg"
        android:textSize="16sp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/insertAsyncMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/phandler_insert_async_msg"
        android:textSize="16sp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/activityDemo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/phandler_activity_demo"
        android:textSize="16sp"
        android:gravity="center"/>

</LinearLayout>